smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-statement-invalid-id.smithy
// Parse error at line 4, column 22 near `!`: Unexpected syntax
$version: "0.1.0"

use shape smithy.api#!
